# autocomplete

./: .gitignore  CMakeLists.txt  Notes.md  README.md  autocomplete  makefile
AutocompleteSolution/: AutocompleteSolution.slnx
AutocompleteSolution/CLIWrapper/: AutocompleteWrapper.cpp  AutocompleteWrapper.h  CLIWrapper.vcxproj  CLIWrapper.vcxproj.filters
AutocompleteSolution/TrieLib/: TrieLib.vcxproj  TrieLib.vcxproj.filters
AutocompleteSolution/TrieTestApp/: Program.cs  TrieTestApp.csproj
CppCliWrapper/: CppCliWrapper.slnx
CppCliWrapper/CppCliWrapper/: CppCliWrapper.vcxproj
TrieCore/: TrieCore.slnx
TrieCore/TrieCore/: TrieCore.vcxproj  TrieCore.vcxproj.filters
acapi/: Program.cs  acapi.csproj  acapi.http
acapi/Controllers/: AutocompleteController.cs
acapi/Properties/: launchSettings.json
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Autocomplete.tsx
frontend/src/services/: api.ts
include/: reader.h  trie.h
input_files/: small_test.txt
src/: main.cpp  reader.cpp  trie.cpp
tests/: tests.cpp
